--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#8F51B5</color>
+    <color name="colorPrimaryDark">#803F9F</color>
+    <color name="colorAccent">#cF40f1</color>
+    <color name="lavender">#D9b3E6</color>
+    <color name="grey">#D9d3E6</color>
 </resources>
