--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,11 @@
 
         <ImageView
             style="@style/imageYoga"
-            android:id="@+id/anuvil"
+            android:id="@+id/img1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/anuvil"
+            android:onClick="display"
             />
 
         <TextView
@@ -45,9 +46,11 @@
 
         <ImageView
             style="@style/imageYoga"
+            android:id="@+id/img2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/padmasan"
+            android:onClick="display"
             />
 
         <TextView
@@ -59,9 +62,11 @@
 
         <ImageView
             style="@style/imageYoga"
+            android:id="@+id/img3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/viparitakarani"
+            android:onClick="display"
             />
 
         <TextView
@@ -74,9 +79,11 @@
 
         <ImageView
             style="@style/imageYoga"
+            android:id="@+id/img4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/merudanda"
+            android:onClick="display"
             />
 
         <TextView
@@ -84,14 +91,17 @@
             android:id="@+id/breath"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/aware" />
+            android:text="@string/aware"
+            />
 
 
         <ImageView
             style="@style/imageYoga"
+            android:id="@+id/img5"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/breathing"
+            android:onClick="display"
             />
 
         <Button
