--- a/app/src/main/res/layout/displayinfo.xml
+++ b/app/src/main/res/layout/displayinfo.xml
@@ -3,10 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <TextView
         android:id="@+id/interpre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:text="Interpretation" />
+
+    </ScrollView>
 </LinearLayout>
